--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eruda-dom": "^2.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-card-flip": "^1.0.11",
     "react-dom": "^16.13.1"
   },
   "browserslist": {
